src/style.css
body {
    background-image: url(../media/background.jpeg);
    background-size: cover;
}

.menu {
    display: flex;
    justify-content: center;
    gap: 15px;
    padding-top: 2vh;
}

.button {
    padding: 10px 25px 10px 25px;
    border-radius: 25px;
    background-color: rgb(99, 69, 29);
    border: 2px solid burlywood;
    color: white;
    font-size: 22px;
    font-weight: 800;
    /* letter-spacing: 2px; */
    font-family: 'Archivo', sans-serif;
}

.button:hover {
    background-color: rgb(210, 174, 127);
}

.button:active {
    transform: scale(0.98);
}

#content {
    background-color: rgba(0,0,0,0.8);
    color: aliceblue;
    box-sizing: border-box;
    height: auto;
    padding: 0 5vw 10vh 5vw;
    margin: 0 10vw 0 10vw;
    border-radius: 10px;
}

.container {
    min-width: 400px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 40px;
}

.heading {
    font-size: 48px;
    padding: 50px 0 50px 0;
    font-family: 'Archivo', sans-serif;
    color: burlywood;
}

.copy {
    font-size: 32px;
    margin-bottom: 50px;
    color: rgb(250, 245, 238);
}

.item {
    flex-basis: 20vw;
    height: auto;
    min-height: 650px;
    min-width: 350px;
    border: 2px solid white;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    color: antiquewhite;
}

.item-picture {
    box-sizing: border-box;
    height: 55%;
    background-size: cover;
    border-radius: 10px;
    background-position: 50% 60%;
    background-repeat: no-repeat;
}

.item-title {
    height: 10%;
    font-size: 32px;
    text-align: center;
    padding-top: 25px;
    font-family: 'Archivo', sans-serif;
}

.item-desc {
    background-color: rgba(255, 172, 71, 0.5);
    height: 35%;
    padding: 25px;
    font-size: 18px;
    text-align: justify;
    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
    font-family: 'Nunito', sans-serif;
    color: rgb(250, 245, 238);
}

